Ajustes del token JWT